# prior-bank-sms-parser

./: Dockerfile  README.md  pyproject.toml  run-locally.sh  run-via-docker.sh
config/: categories.yaml
src/: main.py
src/models/: Transaction.py  TransactionType.py
src/utils/html_generating/: html_report_creator.py  primary_card_finder.py
src/utils/pdf_parsing/: category_finder.py  config_loader.py  numeric_rounder.py  pdf_reader.py  sms_message_extractor.py
