[tool.poetry]
name = "prior-bank-sms-parser"
version = "0.1.0"
description = ""
authors = ["eugene2owl <eugene2owl@gmail.com>"]
readme = "README.md"
packages = [{include = "prior_bank_sms_parser"}]

[tool.poetry.dependencies]
python = "^3.10"
pdfplumber = "^0.11.4"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
